--- a/client/src/components/Rating/style.css
+++ b/client/src/components/Rating/style.css
@@ -4,7 +4,7 @@
   flex-direction: row-reverse;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 0 2rem;
+  padding: 0 1.5rem;
 }
 
 .rating__breakdown {
