--- a/client/src/components/ReviewForm/style.css
+++ b/client/src/components/ReviewForm/style.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 1.5rem;
 }
 
 .review-form__form {
