--- a/client/src/components/Reviews/Review/style.css
+++ b/client/src/components/Reviews/Review/style.css
@@ -1,6 +1,6 @@
 .review {
   padding: 1rem;
-  margin: 1rem;
+  margin: 1rem .5rem;
   border: .1rem solid var(--color-gray);
   border-radius: .5rem;
 }
